--- a/Menu.html
+++ b/Menu.html
@@ -29,10 +29,10 @@
         <div class="container">
             <ul>
                 <li><a href="/index.html">Home</a></li>
-                <li><a href="/Menu.html">Our Menu</a></li>
-                <li><a href="/About.html">About</a></li>
-                <li><a href="/Gallery.html">Gallery</a></li>
-                <li><a href="/Contact.html">Contact</a></li>
+                <li><a href="Menu.html">Our Menu</a></li>
+                <li><a href="About.html">About</a></li>
+                <li><a href="Gallery.html">Gallery</a></li>
+                <li><a href="Contact.html">Contact</a></li>
             </ul>
         </div>
 
@@ -42,13 +42,21 @@
             </button>
             <ul class="menu" id="menu">
                 <li><a href="/index.html">Home</a></li>
-                <li><a href="/Menu.html">Our Menu</a></li>
-                <li><a href="/About.html">About</a></li>
-                <li><a href="/Gallery.html">Gallery</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="Menu.html">Our Menu</a></li>
+                <li><a href="About.html">About</a></li>
+                <li><a href="Gallery.html">Gallery</a></li>
+                <li><a href="Contact.html">Contact</a></li>
             </ul>
+
+
             <div class="menu-container">
+
+
+
             </div>
+
+
+
     </nav>
 
     <div class="menu-header">
