--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
         <div class="container">
             <ul>
                 <li><a href="/index.html">Home</a></li>
-                <li><a href="/Menu.html">Our Menu</a></li>
-                <li><a href="/About.html">About</a></li>
-                <li><a href="/Gallery.html">Gallery</a></li>
-                <li><a href="/Contact.html">Contact</a></li>
+                <li><a href="Menu.html">Our Menu</a></li>
+                <li><a href="About.html">About</a></li>
+                <li><a href="Gallery.html">Gallery</a></li>
+                <li><a href="Contact.html">Contact</a></li>
             </ul>
         </div>
 
@@ -53,10 +53,10 @@
             </button>
             <ul class="menu" id="menu">
                 <li><a href="/index.html">Home</a></li>
-                <li><a href="/Menu.html">Our Menu</a></li>
-                <li><a href="/About.html">About</a></li>
-                <li><a href="/Gallery.html">Gallery</a></li>
-                <li><a href="/Contact.html">Contact</a></li>
+                <li><a href="Menu.html">Our Menu</a></li>
+                <li><a href="About.html">About</a></li>
+                <li><a href="Gallery.html">Gallery</a></li>
+                <li><a href="Contact.html">Contact</a></li>
             </ul>
 
 
