--- a/Contact.html
+++ b/Contact.html
@@ -25,10 +25,10 @@
 
 
 
- <nav id="navbar">
+    <nav id="navbar">
         <div class="container">
             <ul>
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="/coffee-site/">Home</a></li>
                 <li><a href="Menu.html">Our Menu</a></li>
                 <li><a href="About.html">About</a></li>
                 <li><a href="Gallery.html">Gallery</a></li>
