--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <nav id="navbar">
         <div class="container">
             <ul>
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="/coffee-site/">Home</a></li>
                 <li><a href="Menu.html">Our Menu</a></li>
                 <li><a href="About.html">About</a></li>
                 <li><a href="Gallery.html">Gallery</a></li>
@@ -52,7 +52,7 @@
                 ☰
             </button>
             <ul class="menu" id="menu">
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="/coffee-site/">Home</a></li>
                 <li><a href="Menu.html">Our Menu</a></li>
                 <li><a href="About.html">About</a></li>
                 <li><a href="Gallery.html">Gallery</a></li>
