--- a/Menu.html
+++ b/Menu.html
@@ -41,7 +41,7 @@
                 ☰
             </button>
             <ul class="menu" id="menu">
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="/coffee-site/">Home</a></li>
                 <li><a href="Menu.html">Our Menu</a></li>
                 <li><a href="About.html">About</a></li>
                 <li><a href="Gallery.html">Gallery</a></li>
@@ -58,6 +58,7 @@
 
 
     </nav>
+
 
     <div class="menu-header">
         <h1> Our Menu </h1>
